--- a/web_mini_core/.env.example
+++ b/web_mini_core/.env.example
@@ -1,5 +1,7 @@
 # Secret key for Django
 SECRET_KEY=secret
+# Debug mode
+DEBUG=False
 # PostgreSQL Database settings (with example values)
 DB_NAME=minicore_db
 DB_USER=postgres
